@@ -1,5 +1,11 @@
 2008-12-18  Daniel Elstner  <danielk@openismus.com>
 
+	* tests/test-alpha-creation.cc: Kill cruft.  The test case still
+	seems a bit odd though since it creates a Behaviour which is never
+	used.
+
+2008-12-18  Daniel Elstner  <danielk@openismus.com>
+
 	* tests/test-actors.cc: Adapt to new syntax of Clutter::Alpha
 	convenience functions.
 	* tests/test-alpha-creation.cc: ditto,
